<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/windowBackground"
        tools:context=".addShift.AddShiftFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/abl_shift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center">

                <!-- back -->
                <Button
                    android:id="@+id/btn_back"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/shifts"
                    android:textSize="12sp"
                    app:icon="@drawable/ic_back" />

                <!-- page title -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/create_a_shift"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

                <!-- save -->
                <Button
                    android:id="@+id/btn_save"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/save"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <!-- start date label -->
        <TextView
            android:id="@+id/tv_start_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="20dp"
            android:text="@string/start_date"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/til_start_date"
            app:layout_constraintEnd_toStartOf="@id/til_start_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/til_start_date" />

        <!-- start date et -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_start_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toStartOf="@id/btn_start_date_calender"
            app:layout_constraintStart_toEndOf="@id/tv_start_date_label"
            app:layout_constraintTop_toBottomOf="@id/abl_shift">

            <EditText
                android:id="@+id/et_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint=" / / "
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- start date btn -->
        <Button
            android:id="@+id/btn_start_date_calender"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            app:icon="@drawable/ic_calender"
            app:layout_constraintBottom_toBottomOf="@id/til_start_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/til_start_date" />

        <!-- end date label -->
        <TextView
            android:id="@+id/tv_end_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/end_date"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/til_end_date"
            app:layout_constraintStart_toStartOf="@id/tv_start_date_label"
            app:layout_constraintTop_toTopOf="@id/til_end_date" />

        <!-- end date et -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_end_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toStartOf="@id/btn_end_date_calender"
            app:layout_constraintStart_toStartOf="@id/til_start_date"
            app:layout_constraintTop_toBottomOf="@id/til_start_date">

            <EditText
                android:id="@+id/et_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint=" / / "
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- end date btn -->
        <Button
            android:id="@+id/btn_end_date_calender"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            app:icon="@drawable/ic_calender"
            app:layout_constraintBottom_toBottomOf="@id/til_end_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/til_end_date" />

        <!-- name label -->
        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/employee"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/til_name"
            app:layout_constraintStart_toStartOf="@id/tv_start_date_label"
            app:layout_constraintTop_toTopOf="@id/til_name" />

        <!-- name et -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minWidth="150dp"
            app:layout_constraintEnd_toEndOf="@id/til_start_date"
            app:layout_constraintStart_toStartOf="@id/til_start_date"
            app:layout_constraintTop_toBottomOf="@id/til_end_date">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/name"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- role label -->
        <TextView
            android:id="@+id/tv_role_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/Role"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/til_role"
            app:layout_constraintStart_toStartOf="@id/tv_start_date_label"
            app:layout_constraintTop_toTopOf="@id/til_role" />

        <!-- role et -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_role"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minWidth="150dp"
            app:layout_constraintEnd_toEndOf="@id/til_start_date"
            app:layout_constraintStart_toStartOf="@id/til_start_date"
            app:layout_constraintTop_toBottomOf="@id/til_name">

            <EditText
                android:id="@+id/et_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/role"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- color label -->
        <TextView
            android:id="@+id/tv_color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/Color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/til_color"
            app:layout_constraintStart_toStartOf="@id/tv_start_date_label"
            app:layout_constraintTop_toTopOf="@id/til_color" />

        <!-- color et -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minWidth="150dp"
            app:layout_constraintEnd_toEndOf="@id/til_start_date"
            app:layout_constraintStart_toStartOf="@id/til_start_date"
            app:layout_constraintTop_toBottomOf="@id/til_role">

            <EditText
                android:id="@+id/et_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/color"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>